[package]
name = "voicetemp-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "voicetemp_plugin"
crate-type = ["cdylib"] # Компилировать в динамическую библиотеку

[dependencies]
aniapi = { path = "../../aniapi" }
serenity = { workspace = true }
tokio = { workspace = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
log = "0.4"
toml = "0.8"
